--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
                 <li><a href="#portfolio">Portfolio</a></li>
             </ul>
             <button class="cta-button" onclick="scrollToContact()">Contact Me</button>
-            <svg class="hamburg" xmlns="http://www.w3.org/2000/svg" height="32" width="34" viewBox="0 0 448 512">
-                <path d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32-14.3 32 32z"/>
-            </svg>
+            <button class="hamburg" aria-label="Toggle menu">
+                <i class="fas fa-bars"></i>
+            </button>
         </div>
     </nav>
 
